{
    "name": "InputActions",
    "maps": [
        {
            "name": "ControllerInputs",
            "id": "1ee3b47b-ffea-4beb-b961-059b498a74f0",
            "actions": [
                {
                    "name": "TriggerButton",
                    "type": "Button",
                    "id": "e1d472e3-e49a-4faf-aada-0bac90164d0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "22a7f4cb-8b66-4c72-b94f-34a2f1d58fe4",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "741e51a8-f00f-42e9-9f60-ff7e7dd629fc",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}